feat: 支持导购多模态图片输入